--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   {% include head.html %}
 
@@ -13,4 +13,34 @@
       {% include footer.html %}
     </div>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="{{ '/' | relative_url }}">Overview</a></li>
+                <li><a href="{{ '/schedules/' | relative_url }}">Schedules</a></li>
+                <li><a href="{{ '/speakers/' | relative_url }}">Speakers</a></li>
+                <li><a href="{{ '/call-for-papers/' | relative_url }}">Call for Papers</a></li>
+                <li><a href="{{ '/organizers/' | relative_url }}">Organizers</a></li>
+                <li><a href="{{ '/accepted-papers/' | relative_url }}">Accepted Papers</a></li>
+                <li><a href="{{ '/committee/' | relative_url }}">Committee</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        {{ content }}
+    </main>
+    <footer>
+        <p>© 2024 NeuroAI Workshop</p>
+    </footer>
+</body>
 </html>
