Add first blog post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<span class="mobile btn-mobile-menu">
+<!-- <span class="mobile btn-mobile-menu">
   <i class="icon icon-list btn-mobile-menu__icon"></i>
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
@@ -102,4 +102,24 @@
 
     <div class="panel-cover--overlay"></div>
   </div>
+</header> -->
+
+
+
+
+
+
+<header>
+  <nav>
+    <ul>
+      <li><a href="{{ '/' | relative_url }}">Overview</a></li>
+      <li><a href="{{ '/schedules/' | relative_url }}">Schedules</a></li>
+      <li><a href="{{ '/speakers/' | relative_url }}">Speakers</a></li>
+      <li><a href="{{ '/call-for-papers/' | relative_url }}">Call for Papers</a></li>
+      <li><a href="{{ '/organizers/' | relative_url }}">Organizers</a></li>
+      <li><a href="{{ '/accepted-papers/' | relative_url }}">Accepted Papers</a></li>
+      <li><a href="{{ '/committee/' | relative_url }}">Committee</a></li>
+      <li><a href="{{ '/news/' | relative_url }}">News</a></li> <!-- Update this line -->
+    </ul>
+  </nav>
 </header>
