--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- <span class="mobile btn-mobile-menu">
+<span class="mobile btn-mobile-menu">
   <i class="icon icon-list btn-mobile-menu__icon"></i>
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
@@ -21,14 +21,18 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog"
-                  class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/" title="link to Overview" class="nav-button">Overview</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/speakers/" title="link to Speakers" class="nav-button">Speakers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/organizers/" title="link to Organizers" class="nav-button">Organizers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li>
             </ul>
           </nav>
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
-
               {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
@@ -102,24 +106,4 @@
 
     <div class="panel-cover--overlay"></div>
   </div>
-</header> -->
-
-
-
-
-
-
-<header>
-  <nav>
-    <ul>
-      <li><a href="{{ '/' | relative_url }}">Overview</a></li>
-      <li><a href="{{ '/schedules/' | relative_url }}">Schedules</a></li>
-      <li><a href="{{ '/speakers/' | relative_url }}">Speakers</a></li>
-      <li><a href="{{ '/call-for-papers/' | relative_url }}">Call for Papers</a></li>
-      <li><a href="{{ '/organizers/' | relative_url }}">Organizers</a></li>
-      <li><a href="{{ '/accepted-papers/' | relative_url }}">Accepted Papers</a></li>
-      <li><a href="{{ '/committee/' | relative_url }}">Committee</a></li>
-      <li><a href="{{ '/news/' | relative_url }}">News</a></li> <!-- Update this line -->
-    </ul>
-  </nav>
 </header>
