--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,13 +21,13 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/" title="link to Overview" class="nav-button">Overview</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/speakers/" title="link to Speakers" class="nav-button">Speakers</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/organizers/" title="link to Organizers" class="nav-button">Organizers</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#overview" title="link to Overview" class="nav-button">Overview</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#call-for-papers" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#organizers" title="link to Organizers" class="nav-button">Organizers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#accepted-papers" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#committee" title="link to Committee" class="nav-button">Committee</a></li>
             </ul>
           </nav>
 
@@ -86,15 +86,6 @@
                 </a>
               </li>
               {% endif %}
-
-              <!-- RSS -->
-              <!-- <li class="navigation__item">
-                <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
-                  <i class="icon icon-rss"></i>
-                  <span class="label">RSS</span>
-                </a>
-              </li> -->
-
             </ul>
           </nav>
 
