--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,10 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
+
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#blog" title="link to {{ site.title }} blog"
+                  class="blog-button">Blog</a></li>
+
               <li class="navigation__item"><a href="#overview" title="link to Overview" class="nav-button">Overview</a></li>
               <li class="navigation__item"><a href="#schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
               <li class="navigation__item"><a href="#speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
