Add content for Overview, Schedules, Speakers, Call for Papers, Organizers, Accepted Papers, and Committee sections

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,8 +22,8 @@
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
 
-              <li class="navigation__item"><a href="#blog" title="link to blog"
-                  class="nav-button">Blog</a></li>
+              <!-- <li class="navigation__item"><a href="#blog" title="link to blog"
+                  class="nav-button">Blog</a></li> -->
 
               <li class="navigation__item"><a href="#overview" title="link to Overview" class="nav-button">Overview</a></li>
               <li class="navigation__item"><a href="#schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
