Add content for Overview, Schedules, Speakers, Call for Papers, Organizers, Accepted Papers, and Committee sections

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,13 +25,13 @@
               <!-- <li class="navigation__item"><a href="#blog" title="link to blog"
                   class="nav-button">Blog</a></li> -->
 
-              <li class="navigation__item"><a href="#overview" title="link to Overview" class="nav-button">Overview</a></li>
-              <li class="navigation__item"><a href="#schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
-              <li class="navigation__item"><a href="#speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
-              <li class="navigation__item"><a href="#call-for-papers" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
-              <li class="navigation__item"><a href="#organizers" title="link to Organizers" class="nav-button">Organizers</a></li>
-              <li class="navigation__item"><a href="#accepted-papers" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
-              <li class="navigation__item"><a href="#committee" title="link to Committee" class="nav-button">Committee</a></li>
+              <li class="navigation__item"><a href="overview" title="link to Overview" class="nav-button">Overview</a></li>
+              <li class="navigation__item"><a href="schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
+              <li class="navigation__item"><a href="speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
+              <li class="navigation__item"><a href="call-for-papers" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
+              <li class="navigation__item"><a href="organizers" title="link to Organizers" class="nav-button">Organizers</a></li>
+              <li class="navigation__item"><a href="accepted-papers" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
+              <li class="navigation__item"><a href="committee" title="link to Committee" class="nav-button">Committee</a></li>
             </ul>
           </nav>
 
