--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
-        <a href="/" title="link to home of {{ site.title }}">
+        <a href="{{ site.baseurl }}/" title="link to home of {{ site.title }}">
           <!-- <img src="{{ site.baseurl }}/images/profile.jpg" class="user-image" alt="My Profile Photo"> -->
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
@@ -21,17 +21,13 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-
-              <!-- <li class="navigation__item"><a href="#blog" title="link to blog"
-                  class="nav-button">Blog</a></li> -->
-
-              <li class="navigation__item"><a href="overview" title="link to Overview" class="nav-button">Overview</a></li>
-              <li class="navigation__item"><a href="schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
-              <li class="navigation__item"><a href="speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
-              <li class="navigation__item"><a href="call-for-papers" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
-              <li class="navigation__item"><a href="organizers" title="link to Organizers" class="nav-button">Organizers</a></li>
-              <li class="navigation__item"><a href="accepted-papers" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
-              <li class="navigation__item"><a href="committee" title="link to Committee" class="nav-button">Committee</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#overview" title="link to Overview" class="nav-button">Overview</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#schedules" title="link to Schedules" class="nav-button">Schedules</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#speakers" title="link to Speakers" class="nav-button">Speakers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#call-for-papers" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#organizers" title="link to Organizers" class="nav-button">Organizers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#accepted-papers" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#committee" title="link to Committee" class="nav-button">Committee</a></li>
             </ul>
           </nav>
 
