--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}/overview" title="link to Overview" class="nav-button">Overview</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/overview/" title="link to Overview" class="nav-button">Overview</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/speakers/" title="link to Speakers" class="nav-button">Speakers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
