--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="192x192">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="16x16">
   <link rel="manifest" href="{{ site.baseurl }}/images/favicons/manifest.json">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/Neurips.jpg">
   <meta name="theme-color" content="#ffffff">
