--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/organizers/" title="link to Organizers" class="nav-button">Organizers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li>
+              <!-- <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li> -->
             </ul>
           </nav>
 
