--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,11 @@
         <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
+         <div class="top-right-content">
+          <p>NeurIPS 2024</p>
+        </div>
+
+
         <div class="navigation-wrapper">
 
           <nav class="cover-navigation cover-navigation--primary">
