--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
         <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
-         <div class="top-right-content">
-          <p>NeurIPS 2024</p>
+         <div style="position: absolute; top: 20px; right: 20px; color: blue; font-size: 18px; font-weight: bold;">
+          NeurIPS 2024
         </div>
 
 
