--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
          <div style="position: absolute; top: 20px; left: 20px; color: white; font-size: 20px; font-weight: bold;">
-          @NeurIPS 2024
+          NeurIPS 2024
         </div>
 
 
