--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/organizers/" title="link to Organizers" class="nav-button">Organizers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/speakers/" title="link to Speakers" class="nav-button">Speakers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" title="link to Call for Papers" class="nav-button">Call for Papers</a></li>
-<!--               <li class="navigation__item"><a href="{{ site.baseurl }}/travel awards/" title="link to Travel Awards" class="nav-button">Travel Awards</a></li> -->
+              <li class="navigation__item"><a href="{{ site.baseurl }}/travel awards/" title="link to Travel Awards" class="nav-button">Travel Awards</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
               <!-- <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li> -->
