--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,14 @@
           NeurIPS 2024
         </div>
 
+         <div style="position: absolute; top: 12px; left: 10px; color: white; font-size: 20px; font-weight: bold;">
+          Vancouver Convention Center
+        </div>
+
+         <div style="position: absolute; top: 10px; left: 10px; color: white; font-size: 20px; font-weight: bold;">
+          December 14th, 2024
+        </div>
+
 
         <div class="navigation-wrapper">
 
