--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,13 +21,13 @@
           NeurIPS 2024
         </div>
 
-         <div style="position: absolute; top: 650px; left: 650px; color: white; font-size: 20px; font-weight: bold;">
+<!--          <div style="position: absolute; top: 650px; left: 650px; color: white; font-size: 20px; font-weight: bold;">
           Vancouver Convention Center
         </div>
 
          <div style="position: absolute; top: 700px; left: 550px; color: white; font-size: 20px; font-weight: bold;">
           December 14th, 2024
-        </div>
+        </div> -->
 
 
         <div class="navigation-wrapper">
