--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,8 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <h2>{{ site.date_text | markdownify }}</h2>   <!-- December 14th, 2024 below it -->
+
   </header>
 
   <section class="post">
