--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
           <!-- <img src="{{ site.baseurl }}/images/profile.jpg" class="user-image" alt="My Profile Photo"> -->
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
+        <!-- Add the date below the title -->
+        <h2 style="color: black;">{{ site.date_text | markdownify }}</h2>
+        
         <hr class="panel-cover__divider">
         <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
