--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,28 +10,16 @@
     <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
         <a href="{{ site.baseurl }}/" title="link to home of {{ site.title }}">
-          <!-- <img src="{{ site.baseurl }}/images/profile.jpg" class="user-image" alt="My Profile Photo"> -->
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
-        <!-- Add the date below the title -->
-        <h2 style="color: black;">{{ site.date_text | markdownify }}</h2>
-        
         <hr class="panel-cover__divider">
         <p class="panel-cover__description">{{ site.description }}</p>
+
+        <!-- Add date and location below description -->
+        <h2 style="color: white; font-size: 18px; margin-top: 10px;">{{ site.date_text | markdownify }}</h2>
+        <h3 style="color: white; font-size: 16px; margin-top: 5px;">{{ site.where | markdownify }}</h3>
+        
         <hr class="panel-cover__divider panel-cover__divider--secondary">
-
-         <div style="position: absolute; top: 20px; left: 20px; color: white; font-size: 20px; font-weight: bold;">
-          NeurIPS 2024
-        </div>
-
-<!--          <div style="position: absolute; top: 650px; left: 650px; color: white; font-size: 20px; font-weight: bold;">
-          Vancouver Convention Center
-        </div>
-
-         <div style="position: absolute; top: 700px; left: 550px; color: white; font-size: 20px; font-weight: bold;">
-          December 14th, 2024
-        </div> -->
-
 
         <div class="navigation-wrapper">
 
@@ -44,75 +32,11 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/travel awards/" title="link to Travel Awards" class="nav-button">Travel Awards</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
-              <!-- <li class="navigation__item"><a href="{{ site.baseurl }}/committee/" title="link to Committee" class="nav-button">Committee</a></li> -->
             </ul>
           </nav>
 
           <nav class="cover-navigation navigation--social">
-            <ul class="navigation">
-              {% if site.author.twitter_username %}
-              <!-- Twitter -->
-              <li class="navigation__item">
-                <a href="http://twitter.com/{{ site.author.twitter_username }}"
-                  title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
-                  <i class="icon icon-social-twitter"></i>
-                  <span class="label">Twitter</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.facebook_username %}
-              <!-- Facebook -->
-              <li class="navigation__item">
-                <a href="http://fb.me/{{ site.author.facebook_username }}"
-                  title="{{ site.author.facebook_username }} on Facebook" target="_blank">
-                  <i class="icon icon-social-facebook"></i>
-                  <span class="label">Facebook</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.linkedin_username %}
-              <!-- LinkedIn -->
-              <li class="navigation__item">
-                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}"
-                  title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
-                  <i class="icon icon-social-linkedin"></i>
-                  <span class="label">LinkedIn</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.github_username %}
-              <!-- GitHub -->
-              <li class="navigation__item">
-                <a href="https://www.github.com/{{ site.author.github_username }}"
-                  title="{{ site.author.github_username }} on GitHub" target="_blank">
-                  <i class="icon icon-social-github"></i>
-                  <span class="label">GitHub</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.email %}
-              <!-- Email -->
-              <li class="navigation__item">
-                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <i class="icon icon-mail"></i>
-                  <span class="label">Email</span>
-                </a>
-              </li>
-              {% endif %}
-
-              <!-- RSS -->
-              <!-- <li class="navigation__item">
-                <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
-                  <i class="icon icon-rss"></i>
-                  <span class="label">RSS</span>
-                </a>
-              </li> -->
-
-            </ul>
+            <!-- Social navigation here -->
           </nav>
 
         </div>
