--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,7 @@
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="96x96">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="192x192">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" sizes="16x16">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="manifest" href="{{ site.baseurl }}/images/favicons/manifest.json">
   <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/Neurips.jpg">
   <meta name="msapplication-TileColor" content="#ffc40d">
