--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
               <a href="{{ site.baseurl }}/NeuroAI_Webinar/" 
                  title="link to Webinar" 
                  class="nav-button webinar-highlight">
-                Webinar Series <span class="new-badge">LIVE</span>
+                Webinar Series <span class="new-badge">UPCOMING</span>
               </a>
             </li>
 
