--- a/css/main.scss
+++ b/css/main.scss
@@ -76,7 +76,7 @@ pre.highlight code,
     color: white !important;
 }
 
-/* Stylish 'LIVE' badge */
+/* Stylish 'UPCOMING' badge */
 .new-badge {
     background-color: #ffcc00;
     color: black;
