--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,13 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/travel awards/" title="link to Travel Awards" class="nav-button">Travel Awards</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" title="link to Schedules" class="nav-button">Schedules</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" title="link to Accepted Papers" class="nav-button">Accepted Papers</a></li>
+             <li class="navigation__item dropdown">
+              <a href="#" title="Previous Years" class="nav-button">Previous Years ▾</a>
+              <ul class="dropdown-content">
+                <li><a href="{{ site.baseurl }}/previous_years/2024/index.html">2024</a></li>
+                <!-- Future years go here -->
+              </ul>
+            </li>
               <li class="navigation__item">
               <a href="{{ site.baseurl }}/NeuroAI_Webinar/" 
                  title="link to Webinar" 
