--- a/css/main.scss
+++ b/css/main.scss
@@ -97,35 +97,42 @@ pre.highlight code,
 }
 
 
-/* Dropdown styles */
+/* Dropdown container */
 .navigation__item.dropdown {
   position: relative;
 }
 
-.navigation__item.dropdown .dropdown-content {
+/* Dropdown content - hidden by default */
+.dropdown-menu {
   display: none;
   position: absolute;
-  background-color: #222;
+  top: 100%;  /* place below the nav button */
+  left: 0;
+  background-color: #111;
   min-width: 160px;
-  z-index: 1;
-  list-style: none;
+  z-index: 1000;
+  border: 1px solid #444;
+  border-radius: 5px;
   padding: 0;
-  margin: 0;
-  border: 1px solid #333;
+  margin: 5px 0 0;
 }
 
-.navigation__item.dropdown:hover .dropdown-content {
+/* Show dropdown on hover */
+.navigation__item.dropdown:hover .dropdown-menu {
   display: block;
 }
 
-.dropdown-content li a {
+/* Dropdown items */
+.dropdown-menu li a {
   display: block;
   padding: 10px 15px;
   color: white;
   text-decoration: none;
+  background-color: #111;
+  border-bottom: 1px solid #333;
 }
 
-.dropdown-content li a:hover {
-  background-color: #444;
+.dropdown-menu li a:hover {
+  background-color: #333;
 }
 
