--- a/css/main.scss
+++ b/css/main.scss
@@ -136,3 +136,51 @@ pre.highlight code,
   background-color: #333;
 }
 
+
+
+.previous-years-dropdown {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  z-index: 1000;
+}
+
+.previous-years-dropdown .nav-button {
+  padding: 10px 15px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 25px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.previous-years-dropdown .dropdown-menu {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  background-color: #111;
+  border: 1px solid #444;
+  border-radius: 5px;
+  padding: 0;
+  margin: 5px 0 0;
+  list-style: none;
+  min-width: 160px;
+}
+
+.previous-years-dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.previous-years-dropdown .dropdown-menu li a {
+  display: block;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
+}
+
+.previous-years-dropdown .dropdown-menu li a:hover {
+  background-color: #333;
+}
+
