--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,14 @@
   style="background-image: url({{ site.baseurl }}/images/cover.jpg)">
   <div class="panel-main">
 
-    
+    <!-- TOP-RIGHT: Previous Years Dropdown -->
+    <div class="previous-years-dropdown">
+      <a href="#" class="nav-button">Previous Years ▾</a>
+      <ul class="dropdown-menu">
+        <li><a href="{{ site.baseurl }}/previous_years/2024/index.html">2024</a></li>
+        <!-- Add more years as needed -->
+      </ul>
+    </div>
 
     <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
