--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
     <!-- TOP-RIGHT: Previous Years Dropdown -->
     <div class="previous-years-dropdown">
-      <a href="#" class="nav-button">Previous Years ▾</a>
+      <a href="#" class="nav-button">Past Workshops ▾</a>
       <ul class="dropdown-menu">
         <li><a href="{{ site.baseurl }}/previous_years/2024/index.html">2024</a></li>
         <!-- Add more years as needed -->
