--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,12 +55,17 @@
   </div>
 </header>
 
-<!-- Past Workshops Dropdown - fixed top-right -->
-<div class="past-workshops-dropdown">
-  <select onchange="location = this.value;">
-    <option disabled selected>Past Workshops</option>
-    <option value="{{ site.baseurl }}/previous_years/2024/index.html">2024</option>
-    <option value="{{ site.baseurl }}/previous_years/2023/index.html">2023</option>
-    <!-- Add more years here -->
-  </select>
-</div>
+<body>
+  {% include header.html %}  <!-- or however your header is included -->
+
+  <!-- Past Workshops Dropdown - fixed top-right -->
+  <div class="past-workshops-dropdown">
+    <select onchange="location = this.value;">
+      <option disabled selected>Past Workshops</option>
+      <option value="{{ site.baseurl }}/previous_years/2024/index.html">2024</option>
+      <option value="{{ site.baseurl }}/previous_years/2023/index.html">2023</option>
+    </select>
+  </div>
+
+  {{ content }}
+</body>
