--- a/_includes/header.html
+++ b/_includes/header.html
@@ -66,7 +66,7 @@
   <a href="#">Past Workshops ▾</a>
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/previous_years/2024/index.html">2024</a></li>
-    <li><a href="{{ site.baseurl }}/previous_years/2023/index.html">2023</a></li>
+<!--     <li><a href="{{ site.baseurl }}/previous_years/2023/index.html">2023</a></li> -->
     <!-- Add more years if needed -->
   </ul>
 </div>
