--- a/_includes/header.html
+++ b/_includes/header.html
@@ -103,7 +103,7 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/speakers/" class="nav-button">Speakers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/call-for-papers/" class="nav-button">Call for Papers</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/travel awards/" class="nav-button">Travel Awards</a></li>
-              <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" class="nav-button">Schedules</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/schedules/" class="nav-button">Schedule</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/accepted-papers/" class="nav-button">Accepted Papers</a></li>
               <li class="navigation__item">
                 <a href="{{ site.baseurl }}/NeuroAI_Webinar/" class="nav-button webinar-highlight">
