--- a/_includes/header.html
+++ b/_includes/header.html
@@ -118,7 +118,7 @@
 
 
 <footer class="footer">
-  <span class="footer__copyright">© 2025. Moein Khajehnejad. All rights reserved.</span>
+  <span class="footer__copyright">© Resources from Moein Khajehnejad</span>
 </footer>
 
 <!-- JS -->
