--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{{ site.description }}">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
-  <link rel="icon" href="{{ site.baseurl }}/images/favicons/Neurips.jpg" type="image/jpg">
+  <link rel="icon" href="{{ site.baseurl }}/images/favicons/aaai.png" type="image/jpg">
   
   <style>
     /* Fixed dropdown menu */
