--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 
-<!-- 顶部导航栏 -->
+<!-- 顶部导航栏 (桌面端显示) -->
 <nav class="top-navbar">
   <div class="top-navbar-content">
     <a href="{{ site.baseurl }}/" class="logo">LLMRel Workshop</a>
@@ -105,8 +105,8 @@
 
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
-        <!-- 保留原有的导航结构，但隐藏在大屏幕上，只在移动端显示 -->
-        <div class="navigation-wrapper" style="display: none;">
+        <!-- 移动端导航 -->
+        <div class="navigation-wrapper">
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
               <li class="navigation__item"><a href="{{ site.baseurl }}/overview/" class="nav-button">Overview</a></li>
