--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <span class="footer__copyright">&copy; Resources from Moein Khajehnejad.</span>
+  <span class="footer__copyright">&copy; Wei Liu.</span>
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
