--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,7 +64,7 @@
 <!-- 顶部导航栏 (桌面端显示) -->
 <nav class="top-navbar">
   <div class="top-navbar-content">
-    <a href="{{ site.baseurl }}/" class="logo">LLMRel Workshop</a>
+    <a href="{{ site.baseurl }}/" class="logo">Home</a>
     <ul class="top-navbar-navigation">
       <li class="nav-item"><a href="{{ site.baseurl }}/overview/">Overview</a></li>
       <li class="nav-item"><a href="{{ site.baseurl }}/organizers/">Organizers</a></li>
