--- a/css/main.scss
+++ b/css/main.scss
@@ -325,6 +325,7 @@ body.home-page .post > div:last-child {
   width: 220px !important;
   height: 220px !important;
   object-fit: cover !important;
+  object-position: center top !important;
   border-radius: 15px !important;
   margin-bottom: 20px !important;
   border: none !important;
@@ -383,6 +384,8 @@ body.home-page .post > div:last-child {
 .person-card img[style] {
   width: 220px !important;
   height: 220px !important;
+  object-fit: cover !important;
+  object-position: center top !important;
   border-radius: 15px !important;
   border: none !important;
 }
@@ -429,6 +432,8 @@ body.home-page .post > div:last-child {
   .person-card img[style] {
     width: 180px !important;
     height: 180px !important;
+    object-fit: cover !important;
+    object-position: center top !important;
     border-radius: 12px !important;
   }
   
@@ -479,6 +484,8 @@ body.home-page .post > div:last-child {
   .person-card img[style] {
     width: 200px !important;
     height: 200px !important;
+    object-fit: cover !important;
+    object-position: center top !important;
     border-radius: 10px !important;
   }
 }
@@ -488,6 +495,8 @@ body.home-page .post > div:last-child {
   .person-card img[style] {
     width: 160px !important;
     height: 160px !important;
+    object-fit: cover !important;
+    object-position: center top !important;
     border-radius: 8px !important;
   }
   
